# Mimic-Neo

./: .gitignore  AGENT_HANDOFF.md  Cargo.toml  README.md  sai-recorder.config.example.json  tauri.conf.json
.github/workflows/: ci.yml
capabilities/: default.json
docs/: SUBMISSION-MASTER-README.md  animated-webp-recording.md
src/: actions.rs  capture.rs  cli.rs  commands.rs  compress.rs  export.rs  log.rs  main.rs  overlay.rs  recorder.rs  review.rs  tasks.rs  telegram.rs
ui/: app.js  compression.html  dashboard.html  export.html  float.html  float.js  index.html  library.html  main.js  recording.html  replay.html  settings.html  setup.html  states.html  styles.css  task-detail.html
