[package]
name = "sai-recorder"
version = "0.1.0"
edition = "2021"
description = "Opt-in record-and-replay workflow capture with token-efficient compression (Tauri v2 UI), for Simular Sai and computer-use dataset collection"
license = "MIT"

[[bin]]
name = "sai-recorder"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 UI (main window + runtime float window).
tauri = { version = "2", features = [] }
# Global input listener + replay via simulate(); native serde Key/Button names.
rdev = { version = "0.5.3", features = ["serialize"] }
# Window/monitor metadata + screenshots + ring-buffer VideoRecorder.
xcap = { version = "0.9.6", features = ["image"] }
# Screenshot decode (webp) + re-encode (webp lossless / jpeg lossy) + crop/downscale.
image = { version = "0.25", default-features = false, features = ["webp", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.22.1"
timer = "0.2"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
# App-data directory (%APPDATA%) for the task library.
dirs = "6"

# Win32 only for dropping input events that target the recorder's own windows.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
